tried doing the modal again to no avail, centered the raindrop in the div, and added some css for the footer

--- a/css/styles.css
+++ b/css/styles.css
@@ -21,6 +21,7 @@ p, b {
 
 footer {
   background-color: hotpink;
+  color: white;
   border-radius: 0.75rem;
   display: inline-flex;
   flex-wrap: wrap;
